--- a/HahaLolAboutme.Dedsec.html
+++ b/HahaLolAboutme.Dedsec.html
@@ -4,7 +4,4 @@
 - 💞️ I’m looking to collaborate on nth..i wanna be alone but i want friends
 - 📫 How to reach me insta: Reverex1135
 And i love ubisoft games, especially watch dogs and assassin's creed
-<!---
-Reverexz1135/Reverexz1135 is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+No more talk about my private bullshit it's private as i said...haha lol lmfao why am i like that...
