--- a/HahaLolAboutme.Dedsec.html
+++ b/HahaLolAboutme.Dedsec.html
@@ -1,4 +1,4 @@
-- 👋 Hi, I’m @Reverexz1135
+- 👋 sup, I’m @Reverexz1135
 - 👀 I’m interested in Edm and rock and friendship
 - 🌱 I’m currently learning coding to be a hacker and a personal pro in coding
 - 💞️ I’m looking to collaborate on nth..i wanna be alone but i want friends
